# Lily-UI

./: index.html  package-lock.json  package.json  vite.config.ts
doc/: audio-chat-design.md
docs/tests/: frontend-unit-tests.md  integration-tests.md  rust-unit-tests.md
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: commands.rs
src-tauri/src/domain/: interfaces.rs  models.rs
src-tauri/src/infrastructure/: file_storage.rs  mod.rs  websocket.rs
src-tauri/src/services/: audio_service.rs
src-tauri/tests/: audio_integration.rs
src/components/: Chat.css  Chat.test.tsx  Chat.tsx  Log.css  Log.tsx  MCPServiceCard.tsx  Monitor.module.css  Monitor.tsx  ServiceCard.tsx  Sidebar.tsx
src/hooks/: useAudioCapture.ts
src/services/: LogService.ts  PersistenceService.ts  WebSocketService.ts
src/test/: setup.ts
